[tool.poetry]
name = "shapepy"
version = "1.1.2"
description = "Geometric 2D library"
authors = ["Carlos Adir <carlos.adir.leite@gmail.com>"]
readme = "README.md"
packages = [{ include = "shapepy", from = "src" }]

[tool.poetry.dependencies]
numpy = "^1.0.0"
matplotlib = "^3.4.0"
pynurbs = "^1.0.7"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pynurbs = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
pre-commit = "^3.0.0"
coverage = "^7"
pytest-cov = "^6"
pytest-order = "^1.0"
pytest-timeout = "^1.0"
pytest-dependency = "^0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
scriv = {extras = ["toml"], version = "^1.3.1"}

[tool.poetry.extras]
mesh = ["pygmsh"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: src/shapepy/__init__.py: __version__"

[tool.black]
line-length = 79
